<resources>
    <string name="app_name">WordMoney</string>

    <string name="main_rich_mans">인물</string>
    <string name="riches_category_world">세계</string>
    <string name="menu_premium">프리미엄 구매</string>
    <string name="menu_recommend">추천하기</string>
    <string name="menu_review">리뷰쓰기</string>


    <string name="premium_no_ad">광고없이 사용할 수 있어요.</string>
    <string name="premium_no_limit">기능에 제한이 사라집니다.</string>
    <string name="premium_sub_no_limit">인물 5명 → 인물 무제한</string>
    <string name="premium_cost_title">가격</string>
    <string name="premium_cost_won">5900원</string>
    <string name="premium_cost_sub_title">앱을 삭제 하시면 초기화됩니다.</string>
    <string name="premium_coffee">커피 한잔 가격으로 부담 없이 사용하세요.</string>
    <string name="premium_purchase">결제하기</string>


</resources>