<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <ImageView
            android:id="@+id/iv_exit"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_no_ad"
        android:layout_width="0dp"
        android:layout_height="64dp"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_gray_900_radius_16dp"
        >

        <TextView
            android:id="@+id/tv_no_ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="📱"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/premium_no_ad"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/tv_no_ad"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_no_limit"
        android:layout_width="0dp"
        android:layout_height="64dp"
        app:layout_constraintTop_toBottomOf="@id/item_no_ad"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_gray_900_radius_16dp"
        >


        <TextView
            android:id="@+id/tv_no_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="👏"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            />

        <TextView
            android:id="@+id/item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/premium_no_limit"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/tv_no_limit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/item_title"
            android:text="@string/premium_sub_no_limit"
            android:textSize="12sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/item_title"
            android:layout_marginTop="1dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_cost"
        android:layout_width="0dp"
        android:layout_height="118dp"
        app:layout_constraintTop_toBottomOf="@id/item_no_limit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_gray_900_radius_16dp"
        >



        <TextView
            android:id="@+id/tv_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="🎉"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
           android:padding="20dp"
            />

        <TextView
            android:id="@+id/cost_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/premium_cost_title"
            app:layout_constraintStart_toEndOf="@id/tv_cost"
            app:layout_constraintTop_toTopOf="@id/tv_cost"
            app:layout_constraintBottom_toBottomOf="@id/tv_cost"
            android:layout_marginStart="16dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/premium_cost_won"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="18dp"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/cost_help_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/premium_cost_sub_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/cost_title"
            android:layout_marginBottom="38dp"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:textStyle="normal"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/tv_coffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/premium_coffee"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/item_cost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="27dp"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_premium_purchase"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_white_radius_100dp"
        app:layout_constraintTop_toBottomOf="@id/tv_coffee"
        android:layout_marginTop="52dp"
        >

        <TextView
            android:id="@+id/tv_purchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/premium_purchase"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tv_purchase"
            android:src="@drawable/ic_arrow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="12dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>